feat: add register and sign in routes to swagger
